Website is now part of flask

--- a/apiapp/templates/index.html
+++ b/apiapp/templates/index.html
@@ -50,7 +50,7 @@
     </script>
     <script language="JavaScript">
         function query() {
-            const API = "http://127.0.0.1:5000/api/";
+            const API = "/api";
             var request = new XMLHttpRequest();
             request.open("POST", API, true);
             request.setRequestHeader("Content-Type", "application/json");
