--- a/apiapp/templates/index.html
+++ b/apiapp/templates/index.html
@@ -30,6 +30,9 @@
         </div>
 
     </form>
+    <div>
+        <span id="response" class="ms-3 text-danger"></span>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script language="JavaScript">
@@ -56,6 +59,17 @@
             request.setRequestHeader("Content-Type", "application/json");
             request.onreadystatechange = function () {
                 console.log(request.responseText);
+                var landing = document.getElementById("response")
+
+                if (request.status === 200){
+                    landing.classList.classList.remove("text-danger")
+                    landing.classList.classList.add("text-success")
+                    landing.innerText = "Message sent successfully."
+                } else {
+                    landing.classList.classList.add("text-danger")
+                    landing.classList.classList.remove("text-success")
+                    landing.innerText = "Message failed to send."
+                }
             };
             var selection = document.getElementById("selection");
 
